# wego_2025_project

./: README.md
devel/: .catkin
devel/include/amcl/: AMCLConfig.h
devel/include/costmap_2d/: ObstaclePluginConfig.h  VoxelPluginConfig.h
devel/include/global_planner/: GlobalPlannerConfig.h
devel/include/obstacle_avoid/: PersonBBox.h
devel/include/robot_localization/: SetUTMZoneRequest.h
devel/include/teb_local_planner/: TebLocalPlannerReconfigureConfig.h
devel/lib/amcl/: amcl
devel/lib/base_local_planner/: point_grid
devel/lib/costmap_2d/: costmap_2d_cloud  costmap_2d_markers  costmap_2d_node
devel/lib/fake_localization/: fake_localization
devel/lib/global_planner/: planner
devel/lib/gmapping/: slam_gmapping  slam_gmapping_replay
devel/lib/map_server/: map_saver  map_server  rtest
devel/lib/move_base/: move_base
devel/lib/navfn/: navfn_node
devel/lib/pkgconfig/: ackermann_cmd_mux.pc  amcl.pc  base_local_planner.pc  carrot_planner.pc  clear_costmap_recovery.pc  costmap_2d.pc  dwa_local_planner.pc  fake_localization.pc  global_planner.pc  gmapping.pc  learning_tf.pc  map_server.pc  morai_msgs.pc  move_base.pc  move_slow_and_clear.pc  navfn.pc  (+13 more)
src/learning_tf/: CMakeLists.txt
src/learning_tf/launch/: turtle_broadcaster.launch
src/learning_tf/scripts/: carrot_broadcaster.py
src/obstacle_avoid/: CMakeLists.txt
src/obstacle_avoid/msg/: PersonBBox.msg
src/obstacle_avoid/scripts/: avoid_lidar_camera_yolo5.py  yolo_detector.py
src/obstacle_avoid/yolo/: best.pt
src/wego/: CMakeLists.txt
src/wego_2d_nav/: CMakeLists.txt  package.xml
(+99 files in other folders)
